[tool.poetry]
name = "libcst-easy-matcher"
version = "0.1.0"
description = ""
authors = ["Reiner Gerecke <me@reinergerecke.de>"]

[tool.poetry.dependencies]
python = "^3.8"
libcst = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
